--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emailjs/browser": "^3.11.0",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
+    "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "mongoose": "^7.6.2",
+    "mysql2": "^3.14.3",
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
