--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "bcrypt": "^6.0.0",
-    "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.1",
+    "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^7.6.2",
     "mysql2": "^3.14.3",
     "next": "13.5.1",
+    "next-auth": "^4.24.11",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0"
   }
 }
